--- a/src/app/shared/pelicula-detail/pelicula-detail.component.html
+++ b/src/app/shared/pelicula-detail/pelicula-detail.component.html
@@ -1,29 +1,30 @@
-<ion-content>
+<ion-content >
 
   <ion-label>
-    <h2>Titulo</h2>
+    <h2>{{pelicula.title}}</h2>
   </ion-label>
-  <img src="" alt="">
+ 
+  <img src="https://image.tmdb.org/t/p/w500/{{pelicula.backdrop_path}}" alt="">
 
   <ion-grid fixed>
-    <ion-row>
+    <ion-row >
       <ion-col size="4">
         <ion-thumbnail>
-          <img src="" />
+          <img src="https://image.tmdb.org/t/p/w500/{{pelicula.backdrop_path}}" />
         </ion-thumbnail>
       </ion-col>
-      <ion-col size="4">
-        <ion-item>
-          <ion-icon slot="start" name="thumbs-up"></ion-icon>
-          <ion-label>Awesome Label</ion-label>
-          <ion-note>42</ion-note>
+      <ion-col size="8" class="ion-align-items-center">
+        <ion-item >
+          <ion-icon slot="start" name="thumbs-up" color="primary"></ion-icon>
+          <ion-label>Rating</ion-label>
+          <ion-note  color="primary">{{pelicula.vote_average}}</ion-note>
+        </ion-item>
+        <ion-item  >
+          <ion-icon slot="start" name="people" color="primary"></ion-icon>
+          <ion-label>Votos</ion-label>
+          <ion-note  color="primary">{{pelicula.vote_count}}</ion-note>
         </ion-item>
       </ion-col>
-      <ion-item>
-        <ion-icon slot="start" name="contracts"></ion-icon>
-        <ion-label>Awesome Label</ion-label>
-        <ion-note>42</ion-note>
-      </ion-item>
     </ion-row>
   </ion-grid>
 </ion-content>
